- set android manifest debuggable=false
- check Win32 build=Release
- check NDK APP_OPTIM := release in Application.mk
- up the android version code AND version name in the manifest

- build win32 
- test win32

- build android - refresh before building.
  /cygdrive/c/src/android-ndk-r5b/ndk-build
  /cygdrive/c/src/android-ndk-r5b/ndk-build -B		builds all
  check version when testing

- test Nexus One
- upload to website
	- win32
		- buildrelease.bat
		- zip up xenowar subdirectory
	- android
		- down in unflobtactical\android\ufoattack_1\bin
		- grab apk and rename
	Go!


- test incredible (from website)
- test galaxy tab (from website)

- Sign & Publish
	- http://developer.android.com/guide/publishing/app-signing.html#ExportWizard
	- publish
	- check on Samsung


Changes in 2.3 v5 672
Release v2.3 b672
Meet the troops! A new face renderer gives identity and a unique look to the units. 2.3 also adds line-of-sight preview when firing and bug fixes.

- Face rendering!
- Preview line-of-sight when firing
- Warning displays if you are about to send out unarmed units or a too-small squad.
- Can now attack Battleships that have occupied capitals
- Adjusted UI to accommodate faces.
- Move confirmation applies to drag

Changes in 2.2 v4 b660
Release v2.2 b660 Windows 
- Increased contrast in walking dots.
- Added settings UI
- Added move confirmation
- Added dot overlay on main screen

Improved UI for Android now shows movement path and confirms move. Also a settings UI to toggle features of the game and improved "walking dots" graphics.

Changes in 2.1 v3 b649:
- Added framerate limiter on Android. Should stay ~30fps now.
- Added the orbit button to support zoom/rotate on devices without a trackpad.
- Work around for win32 ATI vsync issue

Recent changes:
Added the orbit button to support zoom/rotate on devices without a trackpad. Also implemented a framerate limiter: game should stay at about 30fps and consume less battery.